--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <p>Está é a minha página criada em HTML</p>
     <img src="https://placehold.co/600x400" alt="">
     <a href="http://www.google.com.br/" target="_blank">Abrir Google</a>
+
+    <div class="container">
+        <div id="card">card 1</div>
+        <div id="card">card 2</div>
+        <div id="card">card 3</div>
+    </div>
 </body>
 </html>
